Align fixes

--- a/sass/_current.scss
+++ b/sass/_current.scss
@@ -6,6 +6,7 @@
   width: 100%;
   text-align: center;
   margin-top: auto;
+  margin-bottom: 1rem;
 
   &__place {
     margin-bottom: 1.5rem;
